# NitroCppTest-MalkootKhan

./: CMakeLists.txt  README.md
include/: rectangle.hpp
src/: CMakeLists.txt  main.cpp  rectangle.cpp
tests/: CMakeLists.txt  test_rectangle.cpp
